--- a/src/ComponentStyles/Navbar.css
+++ b/src/ComponentStyles/Navbar.css
@@ -40,6 +40,11 @@ header {
   cursor: pointer;
 }
 
+.logo {
+  color: #f4f4f4 !important;
+    
+}
+
 /* changed this from the tutorial video to
    allow it to gain focus, making it tabbable */
 .nav-toggle {
@@ -48,6 +53,39 @@ header {
   left: -9999px !important;
   
 }
+
+.nav-search, .search-btn {
+  border-radius: 20px;
+  border: 0;
+  padding: .5rem;
+}
+
+.search-btn {
+  margin: 0 .5rem;
+  padding: .6rem .9rem;
+  cursor: pointer;
+  background: transparent;
+  border: 2px #d6d6d682 solid;
+  color: #f4f4f4;
+  font-size: 1.1rem;
+  transition: .1s ease-in;
+}
+
+.nav-search {
+  padding-left: 1rem;
+  font-size: 1.2rem;
+}
+
+.search-btn:hover{
+  color: #222;
+  background: #f4f4f4;
+  transition: .1s ease-in;
+}
+
+.search-container {
+  margin-top: -.5rem;
+}
+
 
 .nav-toggle:focus ~ .nav-toggle-label {
   outline: 3px solid rgba(lightblue, .75);
@@ -147,6 +185,8 @@ nav a:hover {
   
   .logo {
     grid-column: 2 / 3;
+  color: #f4f4f4 !important;
+    
   }
   
   nav {
