--- a/src/ComponentStyles/CastMemberProfile.css
+++ b/src/ComponentStyles/CastMemberProfile.css
@@ -1,5 +1,5 @@
 .CastMemberProfile {
-    max-width: 900px;
+    max-width: 1100px;
     margin: auto;
     margin-top: 7rem;
     color: #f4f4f4;
@@ -10,8 +10,7 @@
     display: flex;
     text-align: left;
     margin: auto;
-    
-    
+    margin-bottom: 3rem;
 }
 
 .CastMemberProfile-wrapper-col1 img  {
@@ -20,6 +19,8 @@
 
 .CastMemberProfile-wrapper-col1{
     margin-right: 1.5rem;
+    align-items: center;
+    align-self: center;
 }
 
 .back-btn {
@@ -32,7 +33,6 @@
     float: right;
     transform: translateX(-4em);
     transition: .1s ease-in;
-    
 }
 
 .back-btn:hover {
@@ -41,5 +41,4 @@
     background: #f4f4f4;
     padding: .5rem 1.2rem;
     transition: .1s ease-in;
-    
 }
