--- a/src/ComponentStyles/CastMemberProfile.css
+++ b/src/ComponentStyles/CastMemberProfile.css
@@ -20,11 +20,13 @@
 .CastMemberProfile-wrapper-col1{
     margin-right: 1.5rem;
     align-items: center;
-    align-self: center;
+    align-self: flex-start;
+    margin-top: 1.7rem;
 }
 
 .back-btn {
     display: block;
+    background: #222;
     color: #f4f4f4;
     border: 2px solid #f4f4f4;
     margin-top: .5rem;
@@ -33,9 +35,11 @@
     float: right;
     transform: translateX(-4em);
     transition: .1s ease-in;
+    outline: none;
 }
 
 .back-btn:hover {
+    cursor: pointer;
     color: #2a2a2a;
     border: 2px solid #f4f4f4;
     background: #f4f4f4;
