--- a/src/ComponentStyles/Footer.css
+++ b/src/ComponentStyles/Footer.css
@@ -11,16 +11,37 @@
     text-decoration: none;
 }
 
+.footer-col-1 a h1 {
+    border: 1px solid #f4f4f4;
+    padding: .6rem 0 .6rem .4rem;
+    transition: .1s ease-in;
+    transform: skewX(-10deg);
+}
+
+.footer-col-1 a h1:hover {
+    background: #f4f4f4;
+    color: black;
+    transition: .1s ease-in;
+    transform: skewX(0);
+    
+}
+
 .footer-row-1{
     display: flex;
-    max-width: 1300px;
+    justify-content: space-between;
+    margin: 0 4rem;
+    max-width: 1200px;
     margin: auto;
+}
+
+.footer-wrapper {
+    max-width: 100vw;
+    margin: 0 2rem;
+
 }
 
 .footer-row-1 .footer-col-1{
     text-align: left;
-    margin-right: 15rem;
-    margin: 1rem 10rem 1rem 1rem;
 }
 
 .footer-row-1 .footer-col-2{
