--- a/src/ComponentStyles/Footer.css
+++ b/src/ComponentStyles/Footer.css
@@ -4,6 +4,7 @@
     background: #000000;
     padding: 2rem 0;
     color: #f4f4f4;
+    bottom: 0;
 }
 
 #footer a {
@@ -22,8 +23,16 @@
     background: #f4f4f4;
     color: black;
     transition: .1s ease-in;
-    transform: skewX(0);
+    transform: skewX(1.5deg);
     
+}
+
+.owen {
+    border: 1px solid #f4f4f4;
+    padding: .5rem;
+    transition: .1s ease-in;
+    transform: skewX(-10deg);
+    font-size: 1.3rem;
 }
 
 .footer-row-1{
@@ -48,4 +57,7 @@
     margin-top: 1rem;
 }
 
+.designed-developed {
+    margin-bottom: 2.5rem;
+}
 
